--- a/HospitalProject/Views/PartialViews/_DepartmentRegisterPartialView.cshtml
+++ b/HospitalProject/Views/PartialViews/_DepartmentRegisterPartialView.cshtml
@@ -4,13 +4,13 @@
 <form asp-controller="Admin" asp-action="DepartmentRegister" method="post">
     <!-- Add your form fields here -->
     <div class="form-group">
-        <label for="DepartmentName">Department Name</label>
+        <label for="DepartmentName">@_localization.GetKey("depName").Value</label>
         <input asp-for="DepartmentName" class="form-control" />
         <span asp-validation-for="DepartmentName" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label for="PhoneNumber">Phone Number</label>
+        <label for="PhoneNumber">@_localization.GetKey("phone").Value</label>
         <input asp-for="PhoneNumber" class="form-control" />
         <span asp-validation-for="PhoneNumber" class="text-danger"></span>
     </div>
