--- a/HospitalProject/Views/_ViewImports.cshtml
+++ b/HospitalProject/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using HospitalProject
 @using HospitalProject.Models
+@using HospitalProject.Services
+@inject LanguageService _localization
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
