Changes on panels

--- a/HospitalProject/Views/User/Login.cshtml
+++ b/HospitalProject/Views/User/Login.cshtml
@@ -1,7 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Login Page";
 }
-<!-- contact section -->
 <section class="contact_section layout_padding">
     <div class="container">
         <div class="heading_container">
@@ -31,9 +30,13 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
-                            <input asp-for="RememberMe" /> <!-- Checkbox for Remember Me -->
-                            <label asp-for="RememberMe">@_localization.GetKey("rememberMe").Value</label>
+                        <div class="form-row">
+                            <div class="col-lg-12">
+                                <div style="display: flex; align-items: center;">
+                                    <label class="form-check-label" asp-for="RememberMe" style="margin-left: auto;">@_localization.GetKey("rememberMe").Value</label>
+                                    <input class="form-check-input" asp-for="RememberMe" style="margin-left: 5px; transform: scale(0.4);" />
+                                </div>
+                            </div>
                         </div>
                         <div class="btn_box">
                             <button type="submit">
@@ -52,14 +55,9 @@
 
                     <script>
                         function signIn() {
-                            // Your custom JavaScript logic for signing in
-                            // This could include form validation, AJAX requests, etc.
-
-                            // For example, you can redirect to another site
                             window.location.href = '@Url.Action("Register", "User")';
                         }
                     </script>
-
                 </div>
             </div>
             <div class="col-md-6">
@@ -72,4 +70,3 @@
         </div>
     </div>
 </section>
-<!-- end contact section -->
