--- a/HospitalProject/Views/Admin/_section1.cshtml
+++ b/HospitalProject/Views/Admin/_section1.cshtml
@@ -38,13 +38,13 @@
 
                         <div class="form-group">
                             <label asp-for="doctor.StartHour"></label>
-                            <input asp-for="doctor.StartHour" type="time" class="form-control" />
+                            <input asp-for="doctor.StartHour"  class="form-control" />
                             <span asp-validation-for="doctor.StartHour" class="text-danger"></span>
                         </div>
 
                         <div class="form-group">
                             <label asp-for="doctor.EndHour"></label>
-                            <input asp-for="doctor.EndHour" type="time" class="form-control" />
+                            <input asp-for="doctor.EndHour" class="form-control" />
                             <span asp-validation-for="doctor.EndHour" class="text-danger"></span>
                         </div>
 
@@ -74,10 +74,10 @@
                         <td>@doctor.Name</td>
                         <td>@doctor.Surname</td>
                         <td>@doctor.DoctorId</td>
-                        @* <td>
+                        <td>
                             <button type="button" data-toggle="modal" data-target="#viewModal-@doctor.DoctorId">View</button>
                             <button type="button" data-toggle="modal" data-target="#removeModal-@doctor.DoctorId">Remove</button>
-                        </td> *@
+                        </td>
                     </tr>
                 }
             }
