--- a/HospitalProject/Views/Patient/_PatientLayout.cshtml
+++ b/HospitalProject/Views/Patient/_PatientLayout.cshtml
@@ -104,11 +104,10 @@
             <aside>
                 <nav>
                     <ul>
-                        <li><a href="@Url.Action("LoadSection", "Admin", new { section = "_section1" })">Doctors</a></li>
-                        <li><a href="@Url.Action("LoadSection", "Admin", new { section = "_section2" })">Departments</a></li>
-                        <li><a href="@Url.Action("LoadSection", "Admin", new { section = "_section3" })">Patients</a></li>
-                        <li><a href="@Url.Action("LoadSection", "Admin", new { section = "_section4" })">Appointment</a></li>
-                    </ul>
+                        <li><a href="@Url.Action("LoadSection", "Patient", new { section = "_section1" })">Appointments</a></li>
+                        <li><a href="@Url.Action("LoadSection", "Patient", new { section = "_section2" })">Create Appointment</a></li>
+                        <li><a href="@Url.Action("LoadSection", "Patient", new { section = "_section3" })">Settings</a></li>
+                        </ul>
                 </nav>
             </aside>
             <div>
